<resources>
    <string name="app_name">Project</string>
    <string name="login_title">Login</string>
    <string name="signup_title">SignUp</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="sign_up_text">Don\'t have an account? Sign up here</string>
    <string name="log_in_text">Already have an account? Log in here</string>
    <string name="main">Main</string>
    <string name="quiz">Quiz</string>
    <string name="calculator">Calculator</string>
    <string name="help">Help</string>
    <string name="examples">Examples</string>
</resources>