<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008080"
        android:padding="5dp"
        android:text="MATRIX CALCULATOR"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="openLoginActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sign Up" />

        <Button
            android:id="@+id/buttonMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:layout_marginLeft="16dp"
            android:onClick="openMainPageActivity"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View All"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="viewAll" />


</LinearLayout>
